-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.2
-
None
-
-
62c36f516b (qt-creator/qt-creator/6.0) 62c36f516b (qt-creator/qt-creator/master) 62c36f516b (qt-creator/qt-creator/qds-3.0) 62c36f516b (qt-creator/qt-creator/qmlprojectstorage)
I'm using Qt Creator 6.0.2 (based on Qt5) (number 55)
Consider the next piece of code:
01 #include <QWidget> 02 03 void f() 04 { 05 QWidget w; 06 w.resize({400, 200}); 07 w.move(200, 300); 08 }
and particullary lines 06 and 07
if I set the cursor at the end of line 07 and move cursor up holding Alt+Shift (what means multi cursor selection) then editor does not create the second cursor as it expected.
And conversely, if I set the cursor at the end of line 06 and move cursor down holding Alt+Shift then the Creator crashes at all.
For Gerrit Dashboard: QTCREATORBUG-26878 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
390359,2 | TextEditor: Fix skipping short lines | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |