TextEditor: Fix skipping short lines

Fixes: QTCREATORBUG-26878
Change-Id: I2d801e3c7e91bad928b203bbca32fdc7b1cdca6e
Reviewed-by: Christian Stenger <christian.stenger@qt.io>